--- a/infinite-trigger.html
+++ b/infinite-trigger.html
@@ -140,7 +140,7 @@
 </head>
 <body>
   <header>
-    <a href="portfolio.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="back-link">← Back to portfolio</a>
     <h1>Infinite Trigger – Shooter Game</h1>
     <p>Third-person wave-based shooter built in Unreal Engine (Blueprints).</p>
 
