--- a/monsterhunter.html
+++ b/monsterhunter.html
@@ -10,8 +10,6 @@
       color: #e5e5e5;
       margin: 0;
       padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      line-height: 1.6;
     }
 
     header {
@@ -124,7 +122,7 @@
 </head>
 <body>
   <header>
-    <a href="portfolio.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="back-link">← Back to portfolio</a>
     <h1>Monster Hunter – Object Oriented 2 Project</h1>
     <p>Windows Forms C# project focused on OOP architecture, combat logic, and map exploration.</p>
   </header>
