--- a/shopSimulator.html
+++ b/shopSimulator.html
@@ -10,8 +10,6 @@
       color: #e5e5e5;
       margin: 0;
       padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      line-height: 1.6;
     }
 
     header {
@@ -115,7 +113,7 @@
 </head>
 <body>
   <header>
-    <a href="portfolio.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="back-link">← Back to portfolio</a>
     <h1>ShopSimulator – Advanced Data Structures Project</h1>
     <p>Console-based shop simulator using trees, stacks, and recursion to manage categories, items, and purchase history.</p>
   </header>
