--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       section {
         padding: 40px 20px;
-        max-width: 900px;
+        max-width: 1200px;
         margin: auto;
         border-bottom: 1px solid #2a2a2a;
       }
@@ -101,6 +101,7 @@
         padding: 20px;
         color: #807f7f;
       }
+
       #resume a {
         margin-top: 10px;
         padding: 10px 18px;
@@ -109,6 +110,7 @@
         color: #000000;
         font-weight: bold;
       }
+
       .nav-cv {
         background-color: #00c3ff;
         color: #000000;
@@ -117,33 +119,37 @@
         border-radius: 999px;
         font-weight: bold;
       }
+
       .project-logo {
         width: 150px;
         border-radius: 10px;
         margin: 15px auto;
         display: block;
       }
+
       .projects {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         gap: 20px;
-        justify-content: center;
+        justify-items: center;
       }
 
       .projects article {
-        width: 280px;
+        width: 260px;
+        max-width: 280px;
+        margin: 0;
         background-color: #111111;
         border-radius: 12px;
-        padding: 20px;
+        padding: 30px 25px; 
         box-shadow: 0 4px 14px rgba(0, 0, 0, 0.6);
         border: 1px solid #000000;
       }
 
       .projects article:hover {
         transform: translateY(-5px);
-        transition: 0.2s ease;
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.7);
       }
+
       .skills {
         display: flex;
         flex-wrap: wrap;
@@ -181,6 +187,7 @@
         padding: 6px 12px;
         font-size: 14px;
       }
+
       .social-links {
         display: flex;
         gap: 20px;
@@ -306,11 +313,11 @@
               <li><a href="monsterhunter.html">More details</a></li>
             </ul>
           </article>
+
           <article>
             <header>
               <h3>Advanced Data Structures Project – ShopSimulator</h3>
             </header>
-
             <ul>
               <li>
                 Console-based shop system featuring a Rock-Paper-Scissors
@@ -331,20 +338,16 @@
 
           <article>
             <header>
-              <h3>LeapCity – Parkour Game</h3>
+              <h3> WIP- LeapCity2 – Parkour Game</h3>
             </header>
-            <img
-              src="inftrigger.img"
-              alt="LeapCity Logo"
-              class="project-logo"
-            />
             <ul>
-              <li>Parkour movement system with sliding and vaults</li>
-              <li>Increasing level difficulty and progression</li>
-              <li>Focus on smooth controls and challenge flow</li>
-              <li><a href="leapcity.html">More details</a></li>
+              <li>Work in progress </li>
+              <li>Second version of LeapCity focusing on overall improvements and a different engine</li>
+              <li>Added more features to improve upon the original</li>
+              <li><a href="leapcity2.html">More details</a></li>
             </ul>
           </article>
+
           <article>
             <header>
               <h3>LeapCity – Parkour Game</h3>
@@ -361,6 +364,7 @@
               <li><a href="leapcity.html">More details</a></li>
             </ul>
           </article>
+
           <article>
             <header>
               <h3>LeapCity – Parkour Game</h3>
@@ -377,6 +381,7 @@
               <li><a href="leapcity.html">More details</a></li>
             </ul>
           </article>
+
           <article>
             <header>
               <h3>LeapCity – Parkour Game</h3>
