--- a/infinite-trigger.html
+++ b/infinite-trigger.html
@@ -31,7 +31,7 @@
       font-size: 16px;
     }
 
-    .back-link {
+    .backLink {
       display: inline-block;
       text-align: left;
       width: 100%;
@@ -41,11 +41,11 @@
       margin-bottom: 15px;
     }
 
-    .back-link:hover {
+    .backLink:hover {
       color: #009fcc;
     }
 
-    .main-image {
+    .mainImage {
       width: 60%;
       max-width: 420px;
       margin: 20px auto 0 auto;
@@ -98,7 +98,7 @@
       color: #009fcc;
     }
 
-    .play-button {
+    .playButton {
       display: inline-block;
       margin-top: 8px;
       padding: 10px 18px;
@@ -108,7 +108,7 @@
       font-weight: bold;
     }
 
-    .play-button:hover {
+    .playButton:hover {
       background-color: #009fcc;
       color: #000000;
     }
@@ -140,11 +140,11 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="backLink">← Back to portfolio</a>
     <h1>Infinite Trigger – Shooter Game</h1>
     <p>Third-person wave-based shooter built in Unreal Engine (Blueprints).</p>
 
-    <img src="inftrigger.img" class="main-image" alt="Infinite Trigger Main Image">
+    <img src="inftrigger.img" class="mainImage" alt="Infinite Trigger Main Image">
   </header>
 
   <main>
@@ -193,7 +193,7 @@
       <h2>Play the Game</h2>
       <p>You can play Infinite Trigger on itch.io:</p>
 
-      <a href="https://antique7.itch.io/infinite-trigger" target="_blank" class="play-button">
+      <a href="https://antique7.itch.io/infinite-trigger" target="_blank" class="playButton">
         Play Infinite Trigger on itch.io
       </a>
     </section>
