--- a/leapcity.html
+++ b/leapcity.html
@@ -11,7 +11,7 @@
             color: #E5E5E5;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+      
         }
 
         header {
@@ -32,15 +32,14 @@
             font-size: 18px;
         }
 
-        .back-link {
+        .backLink {
             text-decoration: none;
             color: #00C3FF;
             font-size: 15px;
-            display: inline-block;
             margin-bottom: 15px;
         }
 
-        .back-link:hover {
+        .backLink:hover {
             color: #009fcc;
         }
 
@@ -89,7 +88,7 @@
             border-top: 1px solid #2a2a2a;
         }
 
-        .project-image {
+        .projectImage {
             width: 100%;
             border-radius: 12px;
             margin: 15px 0;
@@ -100,7 +99,7 @@
 <body>
 
 <header>
-    <a href="portfolio.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="backLink">← Back to portfolio</a>
     <h1>Leap City – Parkour Game</h1>
     <p>Third-person 3D parkour game featuring multi-level chases and movement-based challenges.</p>
 </header>
@@ -119,8 +118,8 @@
             and visual style.
         </p>
 
-        <img src="leapcity1.img" class="project-image" alt="LeapCity screenshot 1">
-           <img src="leapcity3.img" class="project-image" alt="LeapCity screenshot 3">
+        <img src="leapcity1.img" class="projectImage" alt="LeapCity screenshot 1">
+        <img src="leapcity3.img" class="projectImage" alt="LeapCity screenshot 3">
     </section>
 
     <section>
@@ -162,8 +161,6 @@
             <li>Player movement script and animation connections.</li>
             <li>Main title screen, level select, collectibles, and game over screens.</li>
         </ul>
-
-    
     </section>
 
     <section>
