--- a/leapcity2.html
+++ b/leapcity2.html
@@ -31,7 +31,7 @@
       font-size: 16px;
     }
 
-    .back-link {
+    .backLink {
       display: inline-block;
       margin-bottom: 10px;
       text-decoration: none;
@@ -39,7 +39,7 @@
       font-size: 14px;
     }
 
-    .back-link:hover {
+    .backLink:hover {
       color: #009fcc;
     }
 
@@ -111,7 +111,7 @@
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.6);
     }
 
-    .button-link {
+    .buttonLink {
       display: inline-block;
       margin-top: 8px;
       padding: 10px 18px;
@@ -121,13 +121,13 @@
       font-weight: bold;
     }
 
-    .button-link.disabled {
+    .buttonLink.disabled {
       background-color: #2e2e2e;
       color: #888;
       cursor: default;
     }
 
-    .button-link:hover:not(.disabled) {
+    .buttonLink:hover:not(.disabled) {
       background-color: #009fcc;
       color: #000;
     }
@@ -144,7 +144,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="backLink">← Back to portfolio</a>
     <h1>LeapCity v2 – Refined Parkour Experience</h1>
     <p>A more defined, more polished upgrade of the original LeapCity — rebuilt for smoother movement, cleaner levels, and improved progression.</p>
     <span class="badge">Work in Progress</span>
@@ -219,7 +219,7 @@
         LeapCity v2 is not ready for a public build yet.  
         Once the core movement and Level 1 are polished, a downloadable version will be posted.
       </p>
-      <a class="button-link disabled">Play build – coming soon</a>
+      <a class="buttonLink disabled">Play build – coming soon</a>
     </section>
   </main>
 
