--- a/shopSimulator.html
+++ b/shopSimulator.html
@@ -30,7 +30,7 @@
       font-size: 16px;
     }
 
-    .back-link {
+    .backLink {
       display: inline-block;
       margin-bottom: 10px;
       text-decoration: none;
@@ -38,7 +38,7 @@
       font-size: 14px;
     }
 
-    .back-link:hover {
+    .backLink:hover {
       color: #009fcc;
     }
 
@@ -86,7 +86,7 @@
       color: #009fcc;
     }
 
-    .button-link {
+    .buttonLink {
       display: inline-block;
       margin-top: 8px;
       padding: 10px 18px;
@@ -96,7 +96,7 @@
       font-weight: bold;
     }
 
-    .button-link:hover {
+    .buttonLink:hover {
       background-color: #009fcc;
       color: #000;
     }
@@ -113,7 +113,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="backLink">← Back to portfolio</a>
     <h1>ShopSimulator – Advanced Data Structures Project</h1>
     <p>Console-based shop simulator using trees, stacks, and recursion to manage categories, items, and purchase history.</p>
   </header>
@@ -190,7 +190,9 @@
       <h2>View the Code</h2>
       <p>The full project is available on GitHub:</p>
       <a
-        href="https://github.com/AnthonyVitaleiDermes/C-Project2025"    target="_blank"   class="button-link"
+        href="https://github.com/AnthonyVitaleiDermes/C-Project2025"
+        target="_blank"
+        class="buttonLink"
       >
         View ShopSimulator on GitHub
       </a>
