--- a/monsterhunter.html
+++ b/monsterhunter.html
@@ -30,7 +30,7 @@
       font-size: 16px;
     }
 
-    .back-link {
+    .backLink {
       display: inline-block;
       margin-bottom: 10px;
       text-decoration: none;
@@ -38,7 +38,7 @@
       font-size: 14px;
     }
 
-    .back-link:hover {
+    .backLink:hover {
       color: #009fcc;
     }
 
@@ -104,7 +104,7 @@
       font-size: 14px;
     }
 
-    .play-button {
+    .playButton {
       display: inline-block;
       margin-top: 8px;
       padding: 10px 18px;
@@ -114,7 +114,7 @@
       font-weight: bold;
     }
 
-    .play-button:hover {
+    .playButton:hover {
       background-color: #009fcc;
       color: #000;
     }
@@ -122,7 +122,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="backLink">← Back to portfolio</a>
     <h1>Monster Hunter – Object Oriented 2 Project</h1>
     <p>Windows Forms C# project focused on OOP architecture, combat logic, and map exploration.</p>
   </header>
@@ -140,7 +140,6 @@
         The design emphasizes clear architecture, separation of concerns, and reusable code
         rather than complex graphics, making it a solid showcase of object-oriented design.
       </p>
-      <!-- If you have a screenshot, put its file name here -->
       <!-- <img src="monsterhunter1.img" alt="Monster Hunter Screenshot" class="screenshot" /> -->
     </section>
 
@@ -194,7 +193,9 @@
         The full project is available on GitHub:
       </p>
       <a
-        href="https://github.com/Mizuk1nam/Monster-Hunter" target="_blank"  class="play-button"
+        href="https://github.com/Mizuk1nam/Monster-Hunter"
+        target="_blank"
+        class="playButton"
       >
         View Monster Hunter on GitHub
       </a>
