--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
+        height: 220px;
+        box-sizing: border-box;
       }
 
       .projectCard:hover {
@@ -282,10 +284,12 @@
 
       <section id="projects">
         <h2>Projects</h2>
+
         <p>
-          A selection of game and programming projects that highlight my
-          experience with Unreal, Unity, C++, C#, and data structures in real,
-          playable projects.
+          A selection of the projects I spent the most time on during my
+          studies. These represent my strongest work and showcase my experience
+          with Unreal, Unity, C++, C#, and core programming concepts through
+          fully developed, hands-on projects.
         </p>
 
         <div class="projectGrid">
