--- a/leapcity.html
+++ b/leapcity.html
@@ -6,87 +6,119 @@
     <title>Leap City – Parkour Game</title>
 
     <style>
-        body {
-            background-color: #1A1A1A;
-            color: #E5E5E5;
-            margin: 0;
-            padding: 0;
-      
-        }
+      body {
+      background-color: #1a1a1a;
+      color: #e5e5e5;
+      margin: 0;
+      padding: 0;
+    }
 
-        header {
-            text-align: center;
-            padding: 40px 20px;
-            border-bottom: 1px solid #333;
-            max-width: 900px;
-            margin: auto;
-        }
+    header {
+      padding: 30px 20px 20px 20px;
+      border-bottom: 1px solid #333;
+      max-width: 900px;
+      margin: auto;
+    }
 
-        header h1 {
-            color: #00C3FF;
-            margin-bottom: 10px;
-        }
+    header h1 {
+      color: #00c3ff;
+      margin-bottom: 8px;
+    }
 
-        header p {
-            color: #cccbcb;
-            font-size: 18px;
-        }
+    header p {
+      margin: 0;
+      color: #cccbcb;
+      font-size: 16px;
+    }
 
-        .backLink {
-            text-decoration: none;
-            color: #00C3FF;
-            font-size: 15px;
-            margin-bottom: 15px;
-        }
+    .backLink {
+      display: inline-block;
+      margin-bottom: 10px;
+      text-decoration: none;
+      color: #00c3ff;
+      font-size: 14px;
+    }
 
-        .backLink:hover {
-            color: #009fcc;
-        }
+    .backLink:hover {
+      color: #009fcc;
+    }
 
-        main {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-        }
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
 
-        section {
-            margin-bottom: 40px;
-            background-color: #111111;
-            border-radius: 12px;
-            padding: 20px 25px;
-            border: 1px solid #000;
-            box-shadow: 0 4px 14px rgba(0,0,0,0.6);
-        }
+    section {
+      margin-bottom: 30px;
+      background-color: #111111;
+      border-radius: 12px;
+      padding: 20px 20px 25px 20px;
+      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.6);
+      border: 1px solid #000000;
+    }
 
-        h2 {
-            color: #00C3FF;
-            margin-top: 0;
-        }
+    h2 {
+      color: #00c3ff;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
 
-        h3 {
-            color: #00AEEF;
-        }
+    h3 {
+      color: #00aeef;
+      margin-bottom: 8px;
+    }
 
-        a {
-            color: #00C3FF;
-            text-decoration: none;
-        }
+    ul {
+      padding-left: 20px;
+      margin: 0;
+    }
 
-        a:hover {
-            color: #009fcc;
-        }
+    ul li {
+      margin-bottom: 6px;
+    }
 
-        ul {
-            padding-left: 20px;
-        }
+    a {
+      color: #00c3ff;
+      text-decoration: none;
+    }
 
-        footer {
-            text-align: center;
-            padding: 20px 0;
-            color: #777;
-            margin-top: 20px;
-            border-top: 1px solid #2a2a2a;
-        }
+    a:hover {
+      color: #009fcc;
+    }
+
+    .screenshot {
+      width: 100%;
+      max-width: 500px;
+      border-radius: 10px;
+      display: block;
+      margin: 15px auto;
+      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.6);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #807f7f;
+      border-top: 1px solid #2a2a2a;
+      margin-top: 10px;
+      font-size: 14px;
+    }
+
+    .playButton {
+      display: inline-block;
+      margin-top: 8px;
+      padding: 10px 18px;
+      border-radius: 4px;
+      background-color: #00c3ff;
+      color: #000;
+      font-weight: bold;
+    }
+
+    .playButton:hover {
+      background-color: #009fcc;
+      color: #000;
+    }
 
         .projectImage {
             width: 100%;
