--- a/leapcity2.html
+++ b/leapcity2.html
@@ -164,8 +164,8 @@
       </p>
 
       <div class="images">
-        <img src="leapcity1.img" alt="LeapCity Screenshot 1" />
-        <img src="leapcity2.img" alt="LeapCity Screenshot 2" />
+        <img src="leapcity2-1.img.png" alt="LeapCity Screenshot 1" />
+        <img src="leapcity2.img.png" alt="LeapCity Screenshot 2" />
       </div>
     </section>
 
@@ -188,7 +188,7 @@
       </p>
       <ul>
         <li>Movement is partially updated but noticeably smoother.</li>
-        <li>Early versions of Level 1 and Level 2 blockouts exist.</li>
+        <li>Early versions of Level 1 and Level 2 exist.</li>
         <li>UI and unlock system are planned but not implemented yet.</li>
         <li>Collectibles and speedrun modes will be added later.</li>
       </ul>
@@ -208,8 +208,7 @@
       <ul>
         <li>5 levels minimum, each with a unique mechanic.</li>
         <li>Optimized difficulty progression.</li>
-        <li>Collectibles required to unlock new levels.</li>
-        <li>Speedrun / challenge variants after completion.</li>
+
       </ul>
     </section>
 
