--- a/index.html
+++ b/index.html
@@ -347,6 +347,16 @@
               </ul>
             </article>
           </a>
+          <a href="narrativeproject.html">
+            <article class="projectCard">
+              <h3>Narrative Project</h3>
+              <ul class="skillList">
+                <li>C#</li>
+                <li>Object-Oriented Programming</li>
+                <li>Narrative System</li>
+              </ul>
+            </article>
+          </a>
         </div>
       </section>
 
