--- a/narrativeproject.html
+++ b/narrativeproject.html
@@ -152,7 +152,7 @@
       <h2>Technical Details</h2>
       <ul>
         <li>Language: C#</li>
-        <li>Paradigm: Object-Oriented Programming</li>
+        <li>Main Focus: Object-Oriented Programming</li>
         <li>Concepts Used: Classes, Objects, Encapsulation, Methods</li>
       </ul>
 
