--- a/narrativeproject.html
+++ b/narrativeproject.html
@@ -32,7 +32,7 @@
       font-size: 16px;
     }
 
-    .back-link {
+    .backLink {
       display: inline-block;
       width: 100%;
       text-decoration: none;
@@ -42,7 +42,7 @@
       text-align: left;
     }
 
-    .back-link:hover {
+    .backLink:hover {
       color: #009fcc;
     }
 
@@ -89,7 +89,7 @@
       color: #009fcc;
     }
 
-    .button-link {
+    .buttonLink {
       display: inline-block;
       margin-top: 8px;
       padding: 10px 18px;
@@ -99,7 +99,7 @@
       font-weight: bold;
     }
 
-    .button-link:hover {
+    .buttonLink:hover {
       background-color: #009fcc;
       color: #000;
     }
@@ -117,7 +117,7 @@
 
 <body>
   <header>
-    <a href="index.html" class="back-link">← Back to portfolio</a>
+    <a href="index.html" class="backLink">← Back to portfolio</a>
     <h1>Narrative Project – OOP</h1>
     <p>First object-oriented programming project built in C#.</p>
   </header>
@@ -180,7 +180,7 @@
       <a
         href="https://github.com/Mizuk1nam/NarrativeProject"
         target="_blank"
-        class="button-link"
+        class="buttonLink"
       >
         View Narrative Project on GitHub
       </a>
